--- a/less/footer.less
+++ b/less/footer.less
@@ -28,6 +28,10 @@
             display: flex;
             flex-direction: row;
 
+            @media @phone {
+                margin-left: 50px;
+            }
+
             a {
                 color: white;
                 padding-right: 40px;
@@ -40,6 +44,10 @@
             i {
                 color: white;
                 margin-right: 15px;
+
+                @media @phone {
+                    margin-right: 0;
+                }
             }
         }
     }
