--- a/less/global.less
+++ b/less/global.less
@@ -1,5 +1,12 @@
 // UNIVERSAL STYLING
 
+html, body {
+    @media @phone {
+        overflow-x: hidden;
+    }
+}
+
+
 html {
     scroll-behavior: smooth;
 }
@@ -8,14 +15,14 @@ body {
     background-color: #DCDCDC;
     overflow-x: hidden;
     font-family: 'Poppins', sans-serif;
+    box-sizing: border-box;
 
-}
-
-.container {
-    @media @phone {
-        width: 100%;
+    @media  @phone {
+        position: relative;
     }
 }
+
+
 
 p {
     font-size: @paragraphFontSize;
