--- a/less/home.less
+++ b/less/home.less
@@ -56,7 +56,7 @@ header {
         @media @phone {
             width: 100%;
             margin-left: 0;
-
+            margin-bottom: 70px;
 
         }
 
@@ -77,7 +77,8 @@ header {
 
             @media @phone {
                 width: 100%;
-                margin-right: 0;
+                position: relative;
+                right: 28px;
                 margin-top: 0;
                 display: flex;
                 justify-content: center;
@@ -102,10 +103,10 @@ header {
 
     @media @phone {
         width: 100%;
-        top: 45%;
-        left: 5%;
+        position: initial;
+        
         text-align: center;
-        align-items: center;
+        
     }
 
     h1 {
@@ -114,6 +115,7 @@ header {
 
         @media @phone {
             font-size: 3rem;
+            margin-right: 70px;
         }
     }
 
@@ -126,6 +128,7 @@ header {
 
         @media @phone {
             font-size: 1.5rem;
+            margin-right: 70px;
         }
     }
 
@@ -148,6 +151,7 @@ header {
 
         @media @phone {
             align-self: center;
+            margin-right: 70px;
         }
     }
 }
@@ -164,6 +168,7 @@ header {
 
     @media @phone {
         width: 110%;
+        text-align: center;
     }
 
     h1 {
@@ -177,7 +182,7 @@ header {
 
         @media @phone {
             font-size: 1rem;
-            text-align: center;
+            
         }
     }
 
@@ -192,6 +197,7 @@ header {
             width: 200px;
             height: auto;
             top: 40%;
+            
         }
     }
 }
@@ -204,7 +210,7 @@ header {
 
     @media @phone {
         width: 100%;
-        padding-left: 17px;
+        padding: 2%;
     }
 
     .destinations-text {
